--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "3.8"
 services:
   jellyfin:
     image: jellyfin/jellyfin:latest
     container_name: jellyfin
     network_mode: host
     restart: unless-stopped
-    devices:
-      - /dev:/dev   # Pass all video devices for hardware acceleration
+    privileged: true
     volumes:
       - /mnt/t5/jellyfin/config:/config
       - /mnt/wdhdd/Movies:/media/movies
@@ -17,5 +15,5 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2'       # Limit to 2 CPU cores
-          memory: 3G      # Limit memory usage to 3 GB
+          cpus: '2'
+          memory: 3G
