--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./heimdall/config:/config
+      - /mnt/t5/heimdall/heimdall/config:/config
     environment:
       - PUID=1000      # change based on your user
       - PGID=1000      # change based on your group
