--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -3,35 +3,68 @@ version: "3.8"
 services:
   immich-server:
     container_name: immich-server
-    image: ghcr.io/immich-app/immich-server:v1.115.0
+    image: ghcr.io/immich-app/immich-server:release
     restart: unless-stopped
     ports:
       - "2283:2283"
     environment:
       DB_URL: postgres://immich:immich@immich-db:5432/immich
+      REDIS_HOSTNAME: immich-redis
       NODE_ENV: production
     depends_on:
       - immich-db
+      - immich-redis
     volumes:
       - /mnt/t5/immich/photos:/usr/src/app/upload
       - /mnt/wdhdd/Photo:/usr/src/app/library:ro
-    cpus: "1.5"
-    mem_limit: 2g
+    cpus: 3   # restrict usage
+
+  immich-web:
+    container_name: immich-web
+    image: ghcr.io/immich-app/immich-web:release
+    restart: always
+    ports:
+      - "2284:3000"
+    depends_on:
+      - immich-server
+    environment:
+      IMMICH_SERVER_URL: http://100.123.199.118:2283
+
+  immich-microservices:
+    container_name: immich-microservices
+    image: ghcr.io/immich-app/immich-server:release
+    restart: unless-stopped
+    environment:
+      DB_URL: postgres://immich:immich@immich-db:5432/immich
+      REDIS_HOSTNAME: immich-redis
+      NODE_ENV: production
+    depends_on:
+      - immich-db
+      - immich-redis
+    volumes:
+      - /mnt/t5/immich/photos:/usr/src/app/upload
+      - /mnt/wdhdd/Photo:/usr/src/app/library:ro
+    command: [ "start-microservices.sh" ]
+    cpus: 3   # restrict usage
 
   immich-machine-learning:
     container_name: immich-machine-learning
-    image: ghcr.io/immich-app/immich-machine-learning:v1.115.0
+    image: ghcr.io/immich-app/immich-machine-learning:release
     restart: unless-stopped
     volumes:
-      - /mnt/t5/immich/cache:/cache
+      - model-cache:/cache   # cache ML models so they don’t re-download
     environment:
-      TRANSFORMERS_CACHE: /cache
-    cpus: "1.5"
-    mem_limit: 2g
+      NODE_ENV: production
+    cpus: 3   # restrict usage
+
+  immich-redis:
+    container_name: immich-redis
+    image: redis:6
+    restart: unless-stopped
 
   immich-db:
     container_name: immich-db
-    image: tensorchord/pgvecto-rs:pg16-v0.2.0
+    image: ankane/pgvector:latest
     restart: unless-stopped
     environment:
       POSTGRES_DB: immich
@@ -39,8 +72,7 @@ services:
       POSTGRES_PASSWORD: immich
     volumes:
       - db_data:/var/lib/postgresql/data
-    cpus: "0.5"
-    mem_limit: 512m
 
 volumes:
   db_data:
+  model-cache:
