--- a/immich/immich/docker-compose1.yml
+++ b/immich/immich/docker-compose1.yml
@@ -1,1 +1,78 @@
+version: "3.8"
 
+services:
+  immich-server:
+    container_name: immich-server
+    image: ghcr.io/immich-app/immich-server:release
+    restart: unless-stopped
+    ports:
+      - "2283:2283"
+    environment:
+      DB_URL: postgres://immich:immich@immich-db:5432/immich
+      REDIS_HOSTNAME: immich-redis
+      NODE_ENV: production
+    depends_on:
+      - immich-db
+      - immich-redis
+    volumes:
+      - /mnt/t5/immich/photos:/usr/src/app/upload
+      - /mnt/wdhdd/Photo:/usr/src/app/library:ro
+    cpus: 3   # restrict usage
+
+  immich-web:
+    container_name: immich-web
+    image: ghcr.io/immich-app/immich-web:release
+    restart: always
+    ports:
+      - "2284:3000"
+    depends_on:
+      - immich-server
+    environment:
+      IMMICH_SERVER_URL: http://100.123.199.118:2283
+
+  immich-microservices:
+    container_name: immich-microservices
+    image: ghcr.io/immich-app/immich-server:release
+    restart: unless-stopped
+    environment:
+      DB_URL: postgres://immich:immich@immich-db:5432/immich
+      REDIS_HOSTNAME: immich-redis
+      NODE_ENV: production
+    depends_on:
+      - immich-db
+      - immich-redis
+    volumes:
+      - /mnt/t5/immich/photos:/usr/src/app/upload
+      - /mnt/wdhdd/Photo:/usr/src/app/library:ro
+    command: [ "start-microservices.sh" ]
+    cpus: 3   # restrict usage
+
+  immich-machine-learning:
+    container_name: immich-machine-learning
+    image: ghcr.io/immich-app/immich-machine-learning:release
+    restart: unless-stopped
+    volumes:
+      - model-cache:/cache   # cache ML models so they don’t re-download
+    environment:
+      NODE_ENV: production
+    cpus: 3   # restrict usage
+
+  immich-redis:
+    container_name: immich-redis
+    image: redis:6
+    restart: unless-stopped
+
+  immich-db:
+    container_name: immich-db
+    image: ankane/pgvector:latest
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: immich
+      POSTGRES_USER: immich
+      POSTGRES_PASSWORD: immich
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
+  model-cache:
