--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   immich-server:
     container_name: immich-server
-    image: ghcr.io/immich-app/immich-server:release
+    image: ghcr.io/immich-app/immich-server:v2.5.3
     restart: unless-stopped
     ports:
       - "2283:2283"
@@ -17,12 +17,12 @@ services:
     volumes:
       - /mnt/t5/immich/photos:/usr/src/app/upload
       - /mnt/wdhdd/Photo:/usr/src/app/library:ro
-    cpus: 3   # restrict usage
+    cpus: 3
 
   immich-web:
     container_name: immich-web
-    image: ghcr.io/immich-app/immich-web:release
-    restart: always
+    image: ghcr.io/immich-app/immich-web:v2.5.3
+    restart: unless-stopped
     ports:
       - "2284:3000"
     depends_on:
@@ -32,7 +32,7 @@ services:
 
   immich-microservices:
     container_name: immich-microservices
-    image: ghcr.io/immich-app/immich-server:release
+    image: ghcr.io/immich-app/immich-server:v2.5.3
     restart: unless-stopped
     environment:
       DB_URL: postgres://immich:immich@immich-db:5432/immich
@@ -45,26 +45,26 @@ services:
       - /mnt/t5/immich/photos:/usr/src/app/upload
       - /mnt/wdhdd/Photo:/usr/src/app/library:ro
     command: [ "start-microservices.sh" ]
-    cpus: 3   # restrict usage
+    cpus: 3
 
   immich-machine-learning:
     container_name: immich-machine-learning
-    image: ghcr.io/immich-app/immich-machine-learning:release
+    image: ghcr.io/immich-app/immich-machine-learning:v2.5.3
     restart: unless-stopped
     volumes:
-      - model-cache:/cache   # cache ML models so they don’t re-download
+      - model-cache:/cache
     environment:
       NODE_ENV: production
-    cpus: 3   # restrict usage
+    cpus: 3
 
   immich-redis:
     container_name: immich-redis
-    image: redis:6
+    image: redis:7
     restart: unless-stopped
 
   immich-db:
     container_name: immich-db
-    image: ankane/pgvector:latest
+    image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0
     restart: unless-stopped
     environment:
       POSTGRES_DB: immich
